--- a/index.html
+++ b/index.html
@@ -96,7 +96,73 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Productos químicos de limpieza profesional y doméstica-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Productos químicos de limpieza profesional y doméstica</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
+                  </div>
+                  <p class="card-text">Hotelería - Gastronomía - Industria - Hogar.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Cuidado de pisos y muebles-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Cuidado de pisos y muebles</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/pisos.jpg" alt="Pisos y muebles">
+                  </div>
+                  <p class="card-text">Ceras - Curadores - Removedores - Lustramuebles.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Cuidado de la ropa-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Cuidado de la ropa</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
+                  </div>
+                  <p class="card-text">Detergentes - Desmanchadores - Suavizantes - Aditivos.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Mantenimiento de Piscinas-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Mantenimiento de Piscinas</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/piscina.jpg" alt="Piscina">
+                  </div>
+                  <p class="card-text">Cloros - Controladores de <abbr data-toggle="tooltip" title="Coeficiente que indica el grado de acidez o basicidad de una solución acuosa. El pH neutro es 7: si el número es mayor la solución es básica y si es menor es ácida.">pH</abbr> - Clarificador - Accesorios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Jardines y Mascotas-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Jardines y Mascotas</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/mascotas.jpg" alt="Jardines y mascotas">
+                  </div>
+                  <p class="card-text">Champú plagüicida - Insecticidas - Control de plagas.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>  
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Cosmética Automotriz-->
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Cosmética Automotriz</h5>
@@ -107,13 +173,65 @@
                   <div class="img-contenedor">
                     <img class="card-img" src="./assets/products/automotriz.jpg" alt="Automotriz">
                   </div>
-                  <p class="card-text">Champú siliconado, Revividores, Siliconas y Accesorios.</p>
+                  <p class="card-text">Champú siliconado - Revividores - Siliconas - Accesorios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
             </div>          
 
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Equipamiento para limpieza profesional-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Equipamiento para limpieza profesional</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
+                  </div>
+                  <p class="card-text">Carros hoteleros - Carros lavadores - Mopas - Prensamopas - Equipo de limpieza de vidrios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Articulos y accesorios de limpieza-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Articulos y accesorios de limpieza</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
+                  </div>
+                  <p class="card-text">Microfibras - Bolsas - Esponjas - Escobillones - Secadores - Varios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Higiene institucional y cuidado personal-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Higiene institucional y cuidado personal</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
+                  </div>
+                  <p class="card-text">Champús - Acondicionadores - Alcohol en gel - Papel tissue - Varios.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Aromatización-->
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Aromatización</h5>
+                  <div class="img-contenedor">
+                    <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
+                  </div>
+                  <p class="card-text">Aceites Hornitos - Difusores varillas - Esencias - Aromatizadores.</p>
+                  <a href="#" class="btn btn-info">+ Información</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Contenedores de residuos-->
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Contenedores de residuos</h5>
@@ -126,135 +244,31 @@
               </div>
             </div>          
 
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Jardines y Mascotas</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/mascotas.jpg" alt="Jardines y mascotas">
-                  </div>
-                  <p class="card-text">Champús plagüicidas, Insecticidas y Control de plagas.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>          
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Mantenimiento de Piscinas</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/piscina.jpg" alt="Piscina">
-                  </div>
-                  <p class="card-text">Cloros, Controladores de <abbr data-toggle="tooltip" title="Coeficiente que indica el grado de acidez o basicidad de una solución acuosa. El pH neutro es 7: si el número es mayor la solución es básica y si es menor es ácida.">pH</abbr>, Clarificadores y Accesorios.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Materias primas-->
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Materias primas</h5>
                   <div class="img-contenedor">
                     <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
                   </div>
-                  <p class="card-text">Nuestros productos están elaborados con materias primas biodegradables.</p>
+                  <p class="card-text">Sulfatos - Siliconas - Amonios - Glicerina - Vaselina - y Más.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
             </div>          
 
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4"><!--Materias primas-->
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Cuidado de pisos y muebles</h5>
+                  <h5 class="card-title">Tapetes personalizados</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/pisos.jpg" alt="Pisos y muebles">
+                    <img class="card-img" src="./assets/products/tapetes.jpg" alt="Tapetes">
                   </div>
-                  <p class="card-text">Ceras, Curadores, Removedores y Lustramuebles</p>
+                  <p class="card-text">Pisos más limpios: Retienen 80% más humedad y suciedad que otros tapetes de uso habitual.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
                 </div>
               </div>
-            </div>          
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Equipamiento para limpieza profesional</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
-                  </div>
-                  <p class="card-text">Carros hoteleros, Carros lavadores, Mopas, Prensa mopas, Equipo de limpieza de vidrios, etc.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>          
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Productos químicos de limpieza profesional y doméstica</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
-                  </div>
-                  <p class="card-text">Hotelería, Gastronomía, Industria y Hogar.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Cuidado de la ropa</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
-                  </div>
-                  <p class="card-text">Detergentes, Desmanchadores, Suavizantes y Aditivos.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Higiene institucional y cuidado personal</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
-                  </div>
-                  <p class="card-text">Champús, Acondicionadores, Alcohol en gel, Papel tissue y Varios.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Articulos y accesorios de limpieza</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
-                  </div>
-                  <p class="card-text">Microfibras, Bolsas, Esponjas, Escobillones, Secadores y Varios.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Aromatización</h5>
-                  <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
-                  </div>
-                  <p class="card-text">Aceites, Hornitos, Difusores varillas, Aromatizadores y Spray.</p>
-                  <a href="#" class="btn btn-info">+ Información</a>
-                </div>
-              </div>
-            </div>
+            </div> 
 
           </div>
 
