--- a/index.html
+++ b/index.html
@@ -53,14 +53,37 @@
       <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <img class="d-block w-100" src="./assets/images/hoteleria.png" alt="Limpieza de hotel.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/limpiezaauto.jpg" alt="Limpieza de auto.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/piscina.jpg" alt="Mango telescópico limpia piscina.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/lavaplatos.jpg" alt="Trabajo cocina lavaplatos.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/toallas.jpg" alt="Pila de toallas al lado de lavadora.">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/trapeador.jpeg" alt="Concierge.">
+          </div>
+          <div class="carousel-item">
             <img class="d-block w-100" src="./assets/images/quimar1.jpeg" alt="Hombre limpiando vidrio de ventana.">
           </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./assets/images/tachos.jpg" alt="Contenedores de basura.">
+          </div>
+          <!--
           <div class="carousel-item">
             <img class="d-block w-100" src="./assets/images/quimar3.jpeg" alt="Manos jabonosas debajo de grifo abierto.">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="./assets/images/quimar6.jpeg" alt="Manos con guantes de latex limpiando bacha.">
           </div>
+          -->
           <div class="overlay">
             <div class="container">
               <div class="row align-items-center">
@@ -103,7 +126,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Productos químicos de limpieza profesional y doméstica</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/quimicos.jpg" alt="Químicos">
+                    <img class="card-img" src="./assets/products/detergentes.png" alt="Químicos">
                   </div>
                   <p class="card-text">Hotelería - Gastronomía - Industria - Hogar.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -116,7 +139,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Cuidado de pisos y muebles</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/pisos.jpg" alt="Pisos y muebles">
+                    <img class="card-img" src="./assets/products/pisomadera.jpg" alt="Pisos y muebles">
                   </div>
                   <p class="card-text">Ceras - Curadores - Removedores - Lustramuebles.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -129,7 +152,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Cuidado de la ropa</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/ropa.jpg" alt="Ropa">
+                    <img class="card-img" src="./assets/products/cestoderopa.jpg" alt="Cesto de Ropa">
                   </div>
                   <p class="card-text">Detergentes - Desmanchadores - Suavizantes - Aditivos.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -142,7 +165,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Mantenimiento de Piscinas</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/piscina.jpg" alt="Piscina">
+                    <img class="card-img" src="./assets/products/piletas.jpg" alt="Pastillas piscinas">
                   </div>
                   <p class="card-text">Cloros - Controladores de <abbr data-toggle="tooltip" title="Coeficiente que indica el grado de acidez o basicidad de una solución acuosa. El pH neutro es 7: si el número es mayor la solución es básica y si es menor es ácida.">pH</abbr> - Clarificador - Accesorios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -155,7 +178,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Jardines y Mascotas</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/mascotas.jpg" alt="Jardines y mascotas">
+                    <img class="card-img" src="./assets/products/mascotasjardin.jpg" alt="Jardines y mascotas">
                   </div>
                   <p class="card-text">Champú plagüicida - Insecticidas - Control de plagas.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -172,7 +195,7 @@
                     <span class="badge badge-warning">Brillocar</span>
                   </div>-->
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/automotriz.jpg" alt="Automotriz">
+                    <img class="card-img" src="./assets/products/limpiaauto.jpg" alt="Limpieza Automotriz">
                   </div>
                   <p class="card-text">Champú siliconado - Revividores - Siliconas - Accesorios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -185,7 +208,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Equipamiento para limpieza profesional</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/equipamiento.jpg" alt="Limpieza profesional">
+                    <img class="card-img" src="./assets/products/carrito.jpg" alt="Limpieza profesional">
                   </div>
                   <p class="card-text">Carros hoteleros - Carros lavadores - Mopas - Prensamopas - Equipo de limpieza de vidrios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -198,7 +221,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Articulos y accesorios de limpieza</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/profesional.jpg" alt="Articulos">
+                    <img class="card-img" src="./assets/products/articulos.jpeg" alt="Articulos de Limpieza">
                   </div>
                   <p class="card-text">Microfibras - Bolsas - Esponjas - Escobillones - Secadores - Varios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -211,7 +234,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Higiene institucional y cuidado personal</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/higiene.jpeg" alt="Higiene">
+                    <img class="card-img" src="./assets/products/higiene.jpg" alt="Higiene Manos">
                   </div>
                   <p class="card-text">Champús - Acondicionadores - Alcohol en gel - Papel tissue - Varios.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -224,7 +247,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Aromatización</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/aromatizacion.jpg" alt="Aromatización">
+                    <img class="card-img" src="./assets/products/aerosol.jpg" alt="Aerosol">
                   </div>
                   <p class="card-text">Aceites Hornitos - Difusores varillas - Esencias - Aromatizadores.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -237,7 +260,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Contenedores de residuos</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/contenedores.jpg" alt="Contenedores">
+                    <img class="card-img" src="./assets/products/tachos.jpg" alt="Contenedores">
                   </div>
                   <p class="card-text">Pequeños y grandes volúmenes.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -250,7 +273,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Materias primas</h5>
                   <div class="img-contenedor">
-                    <img class="card-img" src="./assets/products/materias_primas.jpg" alt="Materias primas">
+                    <img class="card-img" src="./assets/products/plasticos.png" alt="depósitos plásticos">
                   </div>
                   <p class="card-text">Sulfatos - Siliconas - Amonios - Glicerina - Vaselina - y Más.</p>
                   <a href="#" class="btn btn-info">+ Información</a>
@@ -539,13 +562,13 @@
           </div>
           <div class="modal-body modal-lg text-justify">
             <ul>
-              <li><strong>Porque entendemos los requerimientos de nuestros clientes</strong> Nuestro equipo está integrado por personas idóneas y entusiastas que desempeñan sus tareas con eficiencia, seriedad y esmero. Trabajamos para alcanzar la satisfacción de nuestros clientes y la optimización y perfeccionamiento de los servicios que brindamos. Estamos siempre dispuestos a atenderte y escucharte, para lograr comprender y resolver tus inquietudes e inconvenientes.</li>
-              <li><strong>Porque nos sentimos parte de su empresa</strong> Trabajamos en equipo con nuestros clientes; existimos por y para nuestros clientes y les servimos de manera personalizada; con dedicación, respeto, velocidad y amabilidad. Porque nuestro principal objetivo es la satisfacción del cliente</li>
-              <li><strong>Porque respetamos la relación precio-calidad</strong> Nuestros precios se ajustan a la excelente calidad de los productos y servicios que ofrecemos. Maximizamos los esfuerzos para minimizar los costos.</li>
-              <li><strong>Porque trabajamos en Innovación y Desarrollo</strong> Estamos en permanente investigación para hallar las herramientas necesarias que faciliten la tarea de limpieza tanto institucional como doméstica. Desarrollamos nuevos productos bi y tri combinados que permiten la máxima limpieza con el mayor ahorro de energías y costos.</li>
-              <li><strong>Porque nos destacamos en Honestidad e integridad</strong> La transparencia y honradez guían nuestro accionar. Trabajamos de forma consistente y ética respetando la relación con nuestros clientes, como así también con el cuidado del medio ambiente.</li>
-              <li><strong>Porque poseemos una gran Trayectoria y Experiencia</strong> Hace más de quince años que trabajamos brindando servicios de calidad a nuestros clientes, destacándonos a lo largo de ese tiempo por brindar excelente calidad en nuestros productos, servicio personalizado, y variedad de productos</li>
-              <li><strong>Porque logramos las mejores Alianzas</strong> Somos proveedores de las mejores marcas referentes del mercado. Gracias a la experiencia del equipo de trabajo que hemos logrado con nuestros proveedores, agregamos valor a las soluciones de limpieza institucional y doméstica, que nuestros clientes requieren.</li>
+              <li><strong>Porque entendemos los requerimientos de nuestros clientes.</strong> Nuestro equipo está integrado por personas idóneas y entusiastas que desempeñan sus tareas con eficiencia, seriedad y esmero. Trabajamos para alcanzar la satisfacción de nuestros clientes y la optimización y perfeccionamiento de los servicios que brindamos. Estamos siempre dispuestos a atenderte y escucharte, para lograr comprender y resolver tus inquietudes e inconvenientes.</li>
+              <li><strong>Porque nos sentimos parte de su empresa.</strong> Trabajamos en equipo con nuestros clientes; existimos por y para nuestros clientes y les servimos de manera personalizada; con dedicación, respeto, velocidad y amabilidad. Porque nuestro principal objetivo es la satisfacción del cliente</li>
+              <li><strong>Porque respetamos la relación precio-calidad.</strong> Nuestros precios se ajustan a la excelente calidad de los productos y servicios que ofrecemos. Maximizamos los esfuerzos para minimizar los costos.</li>
+              <li><strong>Porque trabajamos en Innovación y Desarrollo.</strong> Estamos en permanente investigación para hallar las herramientas necesarias que faciliten la tarea de limpieza tanto institucional como doméstica. Desarrollamos nuevos productos bi y tri combinados que permiten la máxima limpieza con el mayor ahorro de energías y costos.</li>
+              <li><strong>Porque nos destacamos en Honestidad e integridad.</strong> La transparencia y honradez guían nuestro accionar. Trabajamos de forma consistente y ética respetando la relación con nuestros clientes, como así también con el cuidado del medio ambiente.</li>
+              <li><strong>Porque poseemos una gran Trayectoria y Experiencia.</strong> Hace más de quince años que trabajamos brindando servicios de calidad a nuestros clientes, destacándonos a lo largo de ese tiempo por brindar excelente calidad en nuestros productos, servicio personalizado, y variedad de productos</li>
+              <li><strong>Porque logramos las mejores Alianzas.</strong> Somos proveedores de las mejores marcas referentes del mercado. Gracias a la experiencia del equipo de trabajo que hemos logrado con nuestros proveedores, agregamos valor a las soluciones de limpieza institucional y doméstica, que nuestros clientes requieren.</li>
             </ul>
             <img src="./assets/brands/alianzas.png">
           </div>
